Added Treeview collabration for topic and subtopics

--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -24,7 +24,7 @@
     <thead>
         <tr>
             <th>S.No</th>
-            <th>Topic</th>
+            <th>Topic Name</th>
             <th>Sub Topic</th>
             <th>Reference URL</th>
             <th  colspan="2">Actions</th>
@@ -40,7 +40,7 @@
                 @Count;
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TopicId)
+                @Html.DisplayFor(modelItem => item.TopicName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
