--- a/iTrainee.MVC/Areas/Shared/Views/UserTopics/ManageUserTopics.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/UserTopics/ManageUserTopics.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ManageUserTopics";
 }
 
-<h1>Manage User Topics</h1>
+@*<h1>Manage User Topics</h1>
 
 <div class="d-flex justify-content-between mt-4">
 <a href="/Shared/UserTopics/AddEditUserTopics" class="btn btn-primary btn-add-gradient float-right mb-3"> Add New Topic</a>
@@ -50,4 +50,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
