separate css, js file for trainee, changes in UI trainee dashboard

--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -53,7 +53,7 @@
             </td>
             <td>
                 @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")) ){
-                    @Html.ActionLink("View Progress", "Index","Home",new {Area = "Trainee" ,userId = item.Id, auditId = 0})
+                    @Html.ActionLink("View Progress", "Index","Home",new {Area = "Trainee" ,userId = item.Id, auditId = 0, traineeName= item.FirstName})
                 }
                 else
                 {
