--- a/iTrainee.MVC/Areas/Trainee/Views/Home/SubTopicList.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/SubTopicList.cshtml
@@ -1,49 +1,34 @@
 ﻿@model IEnumerable<iTrainee.Models.SubTopics>
 
 <head>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-    @if (Model != null)
+@if (Model != null)
 {
-@foreach (var subTopic in Model)
-{
-    <div class="row mb-3">
-        <div class="col-10">
-            <div class="d-inline">@subTopic.Name</div>
-            <br />
-            <div class="progress mt-2">
-                <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
+    @foreach (var subTopic in Model)
+    {
+        <div class="row mb-3">
+            <div class="col-10">
+                <div class="d-inline">@subTopic.Name</div>
+                <br />
+                <div class="progress mt-2">
+                    <div class="progress-bar" style="width: @subTopic.Percentage%; background-color:blue" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">@subTopic.Percentage %</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <button data-toggle="modal" class="btn btn-sm mt-2 btn-outline-primary " onclick="GetDailyProgress(@subTopic.Id, @subTopic.UserId, '@Convert.ToString(TempData["HeaderRole"])')" data-target="#myModal2">
+                    @if (Convert.ToString(TempData["HeaderRole"]) == "Mentor")
+                    {
+                        <i class="fa fa-info-circle"></i>
+                    }
+                    else
+                    {
+                        <span class="material-symbols-outlined">edit_note</span>
+                    }
+
+                </button>
             </div>
         </div>
-        <div class="col-1">
-            <button data-toggle="modal" class="btn btn-sm mt-2 btn-outline-primary " onclick="GetDailyProgress(@subTopic.Id, @subTopic.UserId, '@Convert.ToString(TempData["HeaderRole"])')" data-target="#myModal2">
-                @if (Convert.ToString(TempData["HeaderRole"]) == "Mentor")
-                {
-                    <i class="fa fa-info-circle"></i>
-                }
-                else
-                {
-                    <span class="material-symbols-outlined">edit_note</span>
-                }
-
-            </button>
-        </div>
-    </div>
     }
-<script type="text/javascript">
-    function GetDailyProgress(SubTopicId, UserId, Role) {
-        var UserPath = "/Trainee/Home/UpdateDailyProgress?userId=" + UserId + "&subTopicId=" + SubTopicId;
-        $("#myModalBodyDiv1").load(UserPath, function () {
-            $("#myModal2").modal("show");
-
-            if(Role == "Mentor") {
-                 $("#TraineeComments").prop( "disabled", true );
-                 $("#MentorComments").prop( "disabled", false );
-                 $(".Percentage").prop( "disabled", true );
-                 $("#Status").prop( "disabled", true );
-            }
-        });
-
-
-    };
-</script>
+}
+<script src="/js/trainee.js"></script>
