--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -4,167 +4,28 @@
 }
 
 <head>
-    <style>
-
-        .time {
-            font-size: 1.1em;
-            border-bottom: 6px solid #0366d6;
-            border-top: 6px solid #0366d6;
-            border-right: 3px solid #0366d6;
-            border-left: 3px solid #0366d6;
-            border-radius: 8px;
-            margin-top: 8px;
-            padding: 5px;
-            font-size: 0.9em;
-            border-bottom: 3px solid #0366d6;
-            border-top: 3px solid #0366d6;
-            border-right: 1px solid #0366d6;
-            border-left: 1px solid #0366d6;
-            border-radius: 5px;
-            padding: 3px;
-            margin-left: 50em;
-        }
-
-        .time1 {
-            font-size: 0.9em;
-            border-bottom: 3px solid #0366d6;
-            border-top: 3px solid #0366d6;
-            border-right: 1px solid #0366d6;
-            border-left: 1px solid #0366d6;
-            border-radius: 5px;
-            padding: 3px;
-            margin-left: 2em;
-        }
-
-        .dates {
-            font-size: 0.9em;
-            border-bottom: 3px solid #0366d6;
-            border-top: 3px solid #0366d6;
-            border-right: 1px solid #0366d6;
-            border-left: 1px solid #0366d6;
-            border-radius: 5px;
-            padding: 3px;
-        }
-
-        .range-width {
-            width: 460px;
-        }
-
-        #slider-cntnr {
-            position: relative;
-        }
-
-        #frame-slider {
-            width: 100%;
-            margin: 0;
-        }
-
-        #slider-follow {
-            margin-left: -14px;
-            width: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-        }
-
-        #slider-val-cntnr {
-            background-color: white;
-            width: 25px;
-            height: 20px;
-        }
-
-        .topic-name:hover {
-            cursor: pointer;
-            padding: 15px 5px;
-            background-color: #F1F3F4;
-            border-radius: 5px;
-        }
-
-        .topic-name-on-select {
-            font-size: 1.1rem;
-            transition: transform .2s;
-            cursor: pointer;
-            padding: 15px 5px;
-            background-color: #F1F3F4;
-            border-radius: 5px;
-        }
-
-        .topic-name {
-            padding: 15px 5px;
-        }
-
-        .topic-subtopic {
-            display: flex;
-        }
-
-        .topic-list {
-            flex: 1.5;
-        }
-
-        .subtopic-list {
-            flex: 4;
-            margin-left: 25px;
-            box-shadow: inset 14px 0 5px -12px #002eca;
-        }
-
-        .btn-status, .btn-status:hover {
-            background: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
-            color: white;
-        }
-        .hello-name {
-            margin-left: 16px;
-        }
-
-        .time {
-            font-size: 0.9em;
-            border-bottom: 3px solid #0366d6;
-            border-top: 3px solid #0366d6;
-            border-right: 1px solid #0366d6;
-            border-left: 1px solid #0366d6;
-            border-radius: 5px;
-            padding: 3px;
-            margin-left: 50em;
-            margin-top: 10px;
-        }
-
-        .date {
-            font-size: 0.9em;
-            border-bottom: 3px solid #0366d6;
-            border-top: 3px solid #0366d6;
-            border-right: 1px solid #0366d6;
-            border-left: 1px solid #0366d6;
-            border-radius: 5px;
-            padding: 3px;
-            margin-top: 10px;
-            margin-left: 1em;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/trainee.css">
 </head>
-@if(Model.AssignedTopicsList.Count() != 0)
+@if (Model.AssignedTopicsList.Count() != 0)
 {
     <div class="row" onload="GetSubTopicList(@Model.UserId, @Model.AssignedTopicsList.First().Id)">
-    @if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
-    {
-        <h5 class="font-weight-bold mt-4 mb-3 hello-name">Hello @TempData["UserFirstName"],</h5>
-    }
+        @if (Convert.ToString(TempData["FirstName"]) == "TraineeName")
+        {
+            <h5 class="font-weight-bold mt-4 mb-3 hello-name">Hello @TempData["UserFirstName"],</h5>
+        }
 
-    @if (Convert.ToString(TempData["FirstName"]) == "MentorName")
-    {
-        <div class="">
-            <p class="date">Date : @Model.Date.ToShortDateString()</p>
-        </div>
-        <div class="">
-            <p class="time">Sign-In : @Model.SignIn.ToShortTimeString()</p>
-        </div>
-        <div class="">
-            <p class="date">Sign-Out : @Model.SignOut.ToShortTimeString()</p>
-        </div>
-    }
-    else
-    {
-    }
-</div>
+        @if (Convert.ToString(TempData["FirstName"]) == "MentorName")
+        {
+            <div class="trainee-heading mt-4 mb-3">
+                <div class="font-weight-bold trainee-name">
+                    Trainee Name : @Convert.ToString(TempData["TraineeName"])
+                </div>
+                <div class="date">Date : @Model.Date.ToShortDateString()</div>
+                <div class="time">Sign-In : @Model.SignIn.ToShortTimeString()</div>
+                <div class="time">Sign-Out : @Model.SignOut.ToShortTimeString()</div>
+            </div>
+        }
+    </div>
 }
 
 
@@ -173,14 +34,15 @@
         @{
             int Count = 1;
         }
-        @if(Model.AssignedTopicsList.Count() != 0)
+        @if (Model.AssignedTopicsList.Count() != 0)
         {
             @foreach (var topic in Model.AssignedTopicsList)
             {
                 <div class="topic-name nav-item" onclick="GetSubTopicList(@Model.UserId, @topic.Id, this.id)" id=@Count>@topic.Name</div>
                 Count += 1;
             }
-        } else
+        }
+        else
         {
             <h4 class="mt-lg-5">No topics were assigned</h4>
         }
@@ -205,20 +67,4 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    var firstTopic = $('.topic-name').first();
-    $(firstTopic).addClass("topic-name-on-select");
-
-        var GetSubTopicList = function (UserId, TopicId, id) {
-        var UserPath = "/Trainee/Home/SubTopicList?topicId=" + TopicId + "&userId=" + UserId;
-            $("#SubTopic").load(UserPath, function () {
-
-            });
-
-            var someElements = document.querySelectorAll('.topic-name-on-select');
-                $(someElements).removeClass("topic-name-on-select");
-                $('#'+ id).addClass('topic-name-on-select');
-        };
-</script>
-
-
+<script src="/js/trainee.js"></script>
