--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -2,9 +2,11 @@
 
 <link rel="stylesheet" href="/css/user.css">
 
+
 <form id="myForm" method="Post">
     @Html.AntiForgeryToken()
     <div class="row">
+         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="col-md-6">
             @{
                 TempData.Keep("Role");
@@ -12,7 +14,11 @@
             <div class="form-group">
                 <input type="hidden" class="form-control" name="Id" value="@Model.Id" required />
                 <label class="col-form-label">First Name</label>
-                <input type="text" class="form-control" name="FirstName" value="@Model.FirstName" required />
+                <input type="text" autocomplete="off" class="form-control" name="FirstName" value="@Model.FirstName" required />
+                <span asp-validation-for="FirstName" class="text-danger"></span> 
+                <span class="field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span>
+ 
+
             </div>
 
             @if (0 == @Model.Id)
@@ -60,7 +66,8 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label class="col-form-label">Last Name</label>
-                <input type="text" class="form-control" name="LastName" value="@Model.LastName" required />
+                <input type="text" autocomplete="off" class="form-control" name="LastName" value="@Model.LastName" required />
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
