--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -8,26 +8,30 @@
 
 @using (Html.BeginForm())
 {
-	    @Html.AntiForgeryToken()
-    
+	@Html.AntiForgeryToken()
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 	<div class="form-group">
 		<label class="col-form-label">Name</label>
-		<input type="text" class="form-control w-25" name="Name" value="@Model.Name" />
+		@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Mentors</label><br />
 		@Html.ListBoxFor(model=>model.SelectedMentorIds, new MultiSelectList(Model.MentorList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectMentor", @class = "form-control", multiple="multiple" })
+		@Html.ValidationMessageFor(model => model.SelectedMentorIds, "", new { @class = "text-danger" })
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Trainees</label><br />
 		@Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
+		@Html.ValidationMessageFor(model => model.SelectedTraineeIds, "", new { @class = "text-danger" })
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Streams</label><br />
 		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="multiSelectStream", @class = "form-control", multiple="multiple" })
+		@Html.ValidationMessageFor(model => model.SelectedStreamIds, "", new { @class = "text-danger" })
 	</div>
 	<input type="submit" class="mt-3 btn btn-primary" value="Save" />
 }
