--- a/iTrainee.MVC/Areas/Mentor/Views/Home/CreateTopic.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/CreateTopic.cshtml
@@ -1,39 +1,39 @@
 ﻿@model iTrainee.Models.Topics
 
 @{
-	ViewData["Title"] = "CreateTopic";
+    ViewData["Title"] = "CreateTopic";
 }
 <div class=" container ">
-	<div class="row justify-content-center">
-		
-		<div class="col-md-4">
-			<h4 class="mt-5 mb-4 ">Add New Topic</h4>
-			<form asp-action="CreateTopic">
-				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-				<div class="form-group">
-					<label asp-for="StreamId" class="control-label">Stream</label>
-					<input asp-for="StreamId" class="form-control" />
-					<span asp-validation-for="StreamId" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="Name" class="control-label">Name</label>
-					<input asp-for="Name" class="form-control" />
-					<span asp-validation-for="Name" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="ReferenceURL" class="control-label">Reference URL</label>
-					<input asp-for="ReferenceURL" class="form-control" />
-					<span asp-validation-for="ReferenceURL" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<input type="submit" value="Create" class="btn btn-primary" />
-				</div>
-			</form>
-			<a asp-action="Index">Back to List</a>
-							
-		</div>
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <h4 class="mt-5 mb-4 ">Add New Topic</h4>
+            <form asp-action="CreateTopic">
+                @Html.AntiForgeryToken()
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="StreamId" class="control-label">Stream</label>
+                    <input asp-for="StreamId" class="form-control" />
+                    <span asp-validation-for="StreamId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label">Name</label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ReferenceURL" class="control-label">Reference URL</label>
+                    <input asp-for="ReferenceURL" class="form-control" />
+                    <span asp-validation-for="ReferenceURL" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+            <a asp-action="Index">Back to List</a>
 
-	</div>
+        </div>
+
+    </div>
 
 
 </div>
