--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -39,17 +39,13 @@
                                         background: #eee;
                                     }*/
 </style>
-<div class="container py-5">
+<div class="container">
 
     @*<div class="row d-flex justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-6">*@
 
-    <div class="card" id="chat2">
-        <div class="card-header d-flex justify-content-between align-items-center p-3">
-            <h5 class="mb-0">Chat</h5>
-        </div>
+    <div id="chat2">
 
-        <div class="card-body" style="overflow-y: scroll; position: relative; height: 400px">
             @foreach (var item in Model)
             {
                 @if (count == 0)
@@ -65,7 +61,7 @@
 
                 @if (item.Comments != "")
                 {
-                    <div class="d-flex flex-row justify-content-end mb-4 pt-1">
+                    <div class="d-flex flex-row justify-content-end">
                         <div>
                             <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">@Html.DisplayFor(modelItem => item.Comments)</p>
                             <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@Html.DisplayFor(modelItem => item.Receiver)</p>
@@ -79,9 +75,8 @@
 
 
             }
-        </div>
         @* </div>
             </div>*@
-    </div>
+</div>
 </div>
 
