--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -1,17 +1,18 @@
 ﻿@model iTrainee.Models.Stream
 
 <div class="row">
-	<div class="col-lg-12">
-		<form id="streamForm">
-			<div class="form-group">
-				<label class="col-form-label">Name</label>
-				<input type="text" class="form-control" name="Name" value="@Model.Name" />
-			</div>
-			<div class="form-group mt-4 float-right">
-				<input id="btnStreamSave" type="submit" value="Save" class="btn btn-primary mr-3" />
-			</div>
-		</form>
-	</div>
+    <div class="col-lg-12">
+        <form id="streamForm">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label class="col-form-label">Name</label>
+                <input type="text" class="form-control" name="Name" value="@Model.Name" />
+            </div>
+            <div class="form-group mt-4 float-right">
+                <input id="btnStreamSave" type="submit" value="Save" class="btn btn-primary mr-3" />
+            </div>
+        </form>
+    </div>
 </div>
 
 
@@ -23,23 +24,23 @@
 
 <script>
 
-		$(document).ready(function () {
+        $(document).ready(function () {
 
-		$("#btnStreamSave").click(function () {
-			debugger;
-			var updatedStreamData = $("#streamForm").serialize();
-			$.ajax({
-				type: "POST",
-				url: "/Shared/Stream/AddEditStream",
-				data: updatedStreamData,
-				success: function () {
-					$("#streamModal").modal("hide");
-					window.location.replace("/Mentor/Home/ManageStreams")
-				},
-				error: function () {
-					alert("Unable to save data");
-				},
-			});
-		});
-	});
+        $("#btnStreamSave").click(function () {
+            debugger;
+            var updatedStreamData = $("#streamForm").serialize();
+            $.ajax({
+                type: "POST",
+                url: "/Shared/Stream/AddEditStream",
+                data: updatedStreamData,
+                success: function () {
+                    $("#streamModal").modal("hide");
+                    window.location.replace("/Mentor/Home/ManageStreams")
+                },
+                error: function () {
+                    alert("Unable to save data");
+                },
+            });
+        });
+    });
 </script>
