--- a/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
@@ -4,15 +4,6 @@
     ViewData["Title"] = "AddEditMessage";
 }
 
-@*@using (Html.BeginRouteForm(routeName: "Shared",
-    routeValues: new
-    {
-    action = "AddEditMessages",
-    controller = "Messages",
-    area = "Shared",
-    id = 0
-    }, FormMethod.Post))
-    {*@
 <form method="post" id="alertForm">
     @Html.AntiForgeryToken()
 
@@ -21,68 +12,24 @@
         @Html.HiddenFor(model => model.FromId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Message, new { htmlAttributes = new { @name = "Message", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            <label class="col-form-label">Message</label><br />
-            <input type="text" class="form-control w-25" id="Message" name="Message" value="@Model.Message" />
-            </div>*@
-
-        <div class="form-group">
             <label class="col-form-label">Trainees</label><br />
-            @Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
+            @Html.ListBoxFor(model=>model.SelectedTraineeIds ,
+            new MultiSelectList(Model.TraineeList, "Id", "UserName"),
+            htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" />
-            </div>
+            <label class="col-form-label">Message</label><br />
+            <input type="text" class="form-control w-25" name="Message" value="@Model.Message" />
         </div>
+
+        <input type="submit" class="mt-3 btn btn-primary" value="Send" />
     </div>
 </form>
-
-@*@using (Html.BeginForm())
-    {
-    @Html.AntiForgeryToken()
-
-    <div class="form-group">
-    <label class="col-form-label">Name</label>
-    <input type="text" class="form-control w-25" name="Message" value="@Model.Message" />
-    </div>
-
-    <div class="form-group">
-    <label class="col-form-label">Trainees</label><br />
-    @Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
-    </div>
-
-    <input type="submit" class="mt-3 btn btn-primary" value="Save" />
-    }*@
-
 
 <script type="text/javascript">
     $(function(){
         $("#multiSelectTrainee").chosen();
     });
-
-    $("#btnSave").click(function () {
-    debugger
-            var updatedTopicData = $("#alertForm").serialize();
-            $.ajax({
-                type: "POST",
-                url: "/Shared/Messages/AddEditMessages",
-                data: updatedTopicData,
-                success: function () {
-                    window.location.replace("/Mentor/Home/ManageTopics")
-                },
-                error: function () {
-                    alert("Unable to save data");
-                },
-            });
-        });
 
 </script>
