--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -6,6 +6,7 @@
 			<div class="form-group">
 				<label class="col-form-label">Name</label>
 				<input type="text" class="form-control" name="Name" value="@Model.Name" />
+				@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
 			</div>
 			<div class="form-group mt-4 float-right">
 				 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
