--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -71,6 +71,9 @@
                             <a class="nav-link text-white" href="/Admin/Home/Index"><i class="fa fa-home fa-lg"></i></a>
                         </li>
                         <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Admin">Admin</a>
+                        </li>
+                        <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Mentor">Mentor</a>
                         </li>
                         <li class="nav-item px-3">
