--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -5,12 +5,20 @@
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 <style>
-	#hidden{
+	.hidden{
 		display: none;
 	}
 
-	#show{
+	.show{
 		display:block;
+	}
+
+	.submit-button{
+		width:7rem;
+	}
+
+	.submit-button:hover{
+		cursor:pointer;
 	}
 </style>
 
@@ -24,57 +32,93 @@
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 	<div class="form-group">
+		<input value="@Model.Id" name="Id" type="hidden" />
+	</div>
+
+	
+	<div class="form-group">
 		<label class="col-form-label">Name</label>
-		@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+		<input type="text" class="form-control" id="batchName" name="Name" value="@Model.Name" />
+		
+		<label id="batchNameError" class="hidden text-danger">Please enter batch name</label>
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Mentors</label><br />
-		@Html.DropDownListFor(model=>model.SelectedMentorIds, new MultiSelectList(Model.MentorList, "Id", "UserName"),  htmlAttributes: new { id="SelectedMentorIds", @class = "form-control", multiple="multiple" })
-		<label id="mentorError">Please select atleast one mentor</label>
+		@Html.ListBoxFor(model=>model.SelectedMentorIds, new MultiSelectList(Model.MentorList, "Id", "UserName"),  htmlAttributes: new { id="SelectedMentorIds", @class = "form-control", multiple="multiple" })
+		<label id="mentorError" class="hidden text-danger">Please select atleast one mentor</label>
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Trainees</label><br />
-		@Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
-		@Html.ValidationMessageFor(model=>model.SelectedTraineeIds, "", new { @class = "text-danger" })
+		@Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="SelectedTraineeIds", @class = "form-control", multiple="multiple" })
+		<label id="traineeError" class="hidden text-danger">Please select atleast one trainee</label>
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Streams</label><br />
-		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="multiSelectStream", @class = "form-control", multiple="multiple" })
-		@Html.ValidationMessageFor(model => model.SelectedStreamIds, "", new { @class = "text-danger" })
+		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="SelectedStreamIds", @class = "form-control", multiple="multiple" })
+		<label id="streamError" class="hidden text-danger">Please select atleast one stream</label>
 	</div>
-	<input type="submit" id="batchSubmitBtn" class="mt-3 btn btn-primary" value="Save" />
+	<input id="batchSubmitBtn" class="mt-3 btn btn-primary submit-button" value="Save" />
 </form>
+
 
 @section scripts{
 
 <script type="text/javascript">
+
 	$(function(){
-		$("#multiSelectTrainee").chosen({
+		$("#SelectedTraineeIds").chosen({
 			placeholder_text_multiple: "Select minimum one trainee"
 		});
-		$("#multiSelectStream").chosen({
+		$("#SelectedStreamIds").chosen({
 			placeholder_text_multiple: "Select minimum one stream"
 		});  
         $("#SelectedMentorIds").chosen({
             placeholder_text_multiple: "Select minimum one mentor"
         });
+
+		$("#batchSubmitBtn").click(function () {
+			debugger;
+			var mentorCount = $("#SelectedMentorIds option:selected").length;
+			var traineeCount = $("#SelectedTraineeIds option:selected").length;
+			var streamCount = $("#SelectedStreamIds option:selected").length;
+			var batchName = document.getElementById('batchName').value;
+
+			if(mentorCount == 0){
+				$('#mentorError').removeClass("hidden");
+				$('#mentorError').addClass("show");
+			} 
+			if(traineeCount == 0) {
+				$('#traineeError').removeClass("hidden");
+				$('#traineeError').addClass("show");
+			} 
+			if(streamCount == 0) {
+				$('#streamError').removeClass("hidden");
+				$('#streamError').addClass("show");
+			} 
+			if(batchName == "") {
+				$('#batchNameError').removeClass("hidden");
+				$('#batchNameError').addClass("show");
+			} 
+			if(mentorCount != 0 && traineeCount != 0 && streamCount != 0 && batchName != "") {
+				var a = $("#batchForm").serialize();
+				$.ajax({
+					type: "POST",
+					url: "/Shared/Batch/AddEditBatch",
+					data: a,
+					success: function () {
+						window.location.href = "/Shared/Batch/ManageBatch"
+					},
+					error: function () {
+						alert("Unable to save/update data");
+					},
+				});
+			}
+		});
 	});
 
-
-	$(function(){
-    $("#batchSubmitBtn").click(function () {
-		debugger;
-         var count = $("#SelectedMentorIds option:selected").length;
-         if(count == 0){
-             document.getElementById('mentorError').style.color = red;
-             return false;
-         }
-    });
-});
 
 </script>
 
