--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -1,9 +1,6 @@
 ﻿@model iTrainee.Models.Batch;
 @using Microsoft.AspNetCore.Mvc.Rendering;
 
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
 <style>
 	.hidden{
 		display: none;
@@ -14,7 +11,7 @@
 	}
 
 	.submit-button{
-		width:7rem;
+		width:5rem;
 	}
 
 	.submit-button:hover{
@@ -27,9 +24,9 @@
 }
 <h3 class="mt-5 mb-4">Save Batch</h3>
 
-<form id="batchForm">
+<div>
+<form id="batchForm" method="post">
 	@Html.AntiForgeryToken()
-	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 	<div class="form-group">
 		<input value="@Model.Id" name="Id" type="hidden" />
@@ -60,9 +57,12 @@
 		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="SelectedStreamIds", @class = "form-control", multiple="multiple" })
 		<label id="streamError" class="hidden text-danger">Please select atleast one stream</label>
 	</div>
-	<input id="batchSubmitBtn" class="mt-3 btn btn-primary submit-button" value="Save" />
+	<div class="text-right mb-3">
+		<input id="batchSubmitBtn" type="button" class="mt-3 btn btn-primary submit-button" value="Save" />
+	</div>
+	
 </form>
-
+</div>
 
 @section scripts{
 
@@ -108,7 +108,8 @@
 					type: "POST",
 					url: "/Shared/Batch/AddEditBatch",
 					data: a,
-					success: function () {
+					dataType: "json",
+					success: function (result) {
 						window.location.href = "/Shared/Batch/ManageBatch"
 					},
 					error: function () {
