--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -111,6 +111,9 @@
                             <a class="nav-link text-white" href="/Mentor/Home/Index"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
                         </li>
                         <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="/Shared/Batch/ManageBatch">Batch</a>
+                        </li>
+                        <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageStreams">Stream</a>
                         </li>
                         <li class="nav-item px-3">
