Completed issues in form

--- a/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
@@ -35,7 +35,7 @@
     <thead>
 <tr class="text-center">
 			<th >S.No</th>
-			<th class="w-75">Batch</th>
+			<th class="w-50">Batch</th>
 			<th colspan="3">
 				Actions
 			</th>
@@ -57,10 +57,10 @@
                     
 					<a href="/Shared/Batch/AddEditBatch?Id=@item.Id" ><i class="fa fa-pencil edit-icon"></i></a> 
                     </td>
-                    <td>
+                    <td class="text-center">
                     <a  href="/Shared/Batch/DeleteBatch?Id=@item.Id" ><i class="fa fa-trash delete-icon"></i></a>
                     </td>
-                    <td>
+                    <td class="text-center">
                  <a href="/Shared/UserTopics/AddEditUserTopics?Id=@item.Id" >Assign Topics</a>
 				</td>
                
