--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
@@ -52,7 +52,7 @@
                     <a href="#" onclick="AddEditStream(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
                 </td>
                 <td class="text-center">
-                    <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete-stream"><i class="fa fa-trash delete-icon"></i></a>
+                    <a data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete-stream"><i class="fa fa-trash delete-icon"></i></a>
                 </td>
             </tr>
             Count += 1;
