solved issue bad request in user

--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -67,7 +67,7 @@
                     <a id="ediit" onclick="GetUser(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
                     </td>
                     <td class="text-center">
-                    <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+                    <a data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
                     </td>
                 }
         </tr>
