Implementing alert reply flow

--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@model iTrainee.Models.User
 @{
     ViewData["Title"] = "Login Page";
+    TempData.Keep("UserToken");
 }
 
 <div class="container">
