--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageTraineeMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageTraineeMessages.cshtml
@@ -68,7 +68,7 @@
                     @Html.DisplayFor(modelItem => item.Message)
                 </td>
                 <td class="text-center actions-column">
-                    <a href="/Shared/Messages/AddEditMessages?Id=@item.MessageId"><i class="fa fa-reply edit-icon"></i></a>
+                    <a href="#" onclick="ViewAlertDetails(@item.MessageId)"><i class="fa fa-reply edit-icon"></i></a>
                 </td>
             </tr>
         }
@@ -91,7 +91,7 @@
 <script type="text/javascript">
 
     function ViewAlertDetails(id) {
-        var url = "/Shared/Messages/ViewAlertDetails?Id=" + id;
+        var url = "/Shared/Messages/AddEditMessagesResponse?Id=" + id;
         $("#alertModalBodyDiv").load(url, function () {
             $("#alertModal").modal("show");
         });
