DOB validation, Send message UI

--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -36,7 +36,7 @@
 	
 	<div class="form-group">
 		<label class="col-form-label">Name</label>
-		<input type="text" class="form-control" id="batchName" name="Name" value="@Model.Name" />
+		<input type="text" class="form-control" id="batchName" name="Name" value="@Model.Name" autocomplete="off"/>
 		
 		<label id="batchNameError" class="hidden text-danger">Please enter batch name</label>
 	</div>
