--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -1,6 +1,10 @@
 ﻿@model iTrainee.Models.User
 
-<link rel="stylesheet" href="/css/user.css">
+<link rel="stylesheet" href="/css/user.css" />
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
@@ -15,8 +19,6 @@
             }
             <div class="form-group">
                 <input type="hidden" class="form-control" name="Id" value="@Model.Id" />
-                
-
                 <div class="form-group">
                     <label class="col-form-label">First Name</label>
                     @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -24,21 +26,13 @@
                 </div>
             </div>
 
-            @if (0 == @Model.Id)
-            {
-                <div class="form-group">
-                    <label class="col-form-label">Date Of Birth</label>
-                    <input type="date" class="form-control" name="DOB" required />
-                </div>
-            }
-            else
-            {
-                <div class="form-group">
-                    <label class="col-form-label">Date Of Birth</label>
-                    @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", value=@Model.DOB.ToString("yyyy-MM-dd") } })
-                    @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
-                </div>
-            }
+            <div class="form-group">
+                <label class="col-form-label">Date Of Birth</label>
+                <input type="text" id="datepicker" class="form-control" name="DOB" required autocomplete="off" value="@(Model.Id==0 ? "" : @Model.DOB.ToString("dd/MM/yyyy"))" />
+                <span class="fa fa-calendar calendar-icon"></span>
+                @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
+            </div>
+
             <div class="form-group padding-top-15px">
                 <label class="col-form-label d-block">Role</label>
 
@@ -66,10 +60,8 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             }
-
         </div>
         <div class="col-md-6">
-
             <div class="form-group">
                 <label class="col-form-label">Last Name</label>
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -80,18 +72,16 @@
                 <label class="col-form-label">Qualification</label>
                 @Html.DropDownListFor(model => model.Qualification, new List<SelectListItem>
             { new SelectListItem{Text="B.E/B.Tech"},
-            new SelectListItem{Text="Bsc"},
+            new SelectListItem{Text="BSC"},
             new SelectListItem{Text="BCA"},
             new SelectListItem{Text="M.E/M.Tech"},
-            new SelectListItem{Text="Msc"},
+            new SelectListItem{Text="MSC"},
             new SelectListItem{Text="MCA"},
             new SelectListItem{Text="PHD"}}, new { @class = "form-control" })
             </div>
 
-
             @if (0 == @Model.Id)
             {
-
                 <div class="form-group">
                     <label class="col-form-label">User Name</label>
                     @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", placeholder="example@org.com"} })
@@ -103,9 +93,9 @@
                     @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                     @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
                 </div>
-
-            } else {
-                
+            }
+            else
+            {
                 <div class="form-group">
                     <input type="hidden" class="form-control" name="UserName" value="@Model.UserName" />
                 </div>
@@ -116,12 +106,5 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <input type="submit" value="Save" name="submit" class="btn btn-primary mr-3" />
     </div>
-
 }
 
-<script src="/js/user.js"></script>
-@section Scripts {
-    @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-}
