--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -126,7 +126,10 @@
                             type: "POST",
                             contentType: "application/json;charset=UTF-8",
                             dataType: "json",
-
+                            success: function () {
+                                $("#myModal1").modal("hide");
+                                window.location.reload();
+                         },                     
                         })
                     })
         })
