--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -24,9 +24,22 @@
     }
 
     .alertModalBodyDiv {
-        min-height: 480px;
-        height: 480px;
-        overflow-y: scroll;
+        min-height: 350px;
+        height: 410px;
+        overflow-y: auto;
+    }
+
+    .send-message-bar {
+        float: left;
+        justify-content: left !important;
+    }
+
+    .send-icon {
+        float: right;
+        position: relative;
+        cursor: pointer !important;
+        color: #007bff;
+        font-size: large;
     }
 </style>
 
@@ -91,9 +104,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">Alert Response</h3>
-                <a href="#" class="close" data-dismiss="modal">&times;</a>                
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
             </div>
             <div class="modal-body alertModalBodyDiv" id="alertModalBodyDiv">
+            </div>
+            <div class="modal-footer send-message-bar">
+                <input type="text" placeholder="Send Message" class="form-control" />
+                <span class="fa fa-paper-plane send-icon"></span>
             </div>
         </div>
     </div>
