--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -21,32 +21,42 @@
     .actions-column {
         width: 100px;
     }
+
+    .send-bar {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 50%;
+        background-color: red;
+        color: white;
+        text-align: center;
+    }
 </style>
 <div class="container">
     <div id="chat2">
-            @foreach (var item in Model)
+        @foreach (var item in Model)
+        {
+            @if (count == 0)
             {
-                @if (count == 0)
-                {
-                    <div class="d-flex flex-row justify-content-start">
-                        <div>
-                            <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">@Html.DisplayFor(modelItem => item.Message)</p>
-                            <p class="small ms-3 mb-3 rounded-3 text-muted">@Html.DisplayFor(modelItem => item.Sender)</p>
-                        </div>
+                <div class="d-flex flex-row justify-content-start">
+                    <div>
+                        <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">@Html.DisplayFor(modelItem => item.Message)</p>
+                        <p class="small ms-3 mb-3 rounded-3 text-muted">@Html.DisplayFor(modelItem => item.Sender)</p>
                     </div>
-                    count++;
-                }
-
-                @if (item.Comments != "")
-                {
-                    <div class="d-flex flex-row justify-content-end">
-                        <div>
-                            <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">@Html.DisplayFor(modelItem => item.Comments)</p>
-                            <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@Html.DisplayFor(modelItem => item.Receiver)</p>
-                        </div>
-                    </div>
-                }
+                </div>
+                count++;
             }
-</div>
+
+            @if (item.Comments != "")
+            {
+                <div class="d-flex flex-row justify-content-end">
+                    <div>
+                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">@Html.DisplayFor(modelItem => item.Comments)</p>
+                        <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@Html.DisplayFor(modelItem => item.Receiver)</p>
+                    </div>
+                </div>
+            }
+        }
+    </div>
 </div>
 
