--- a/iTrainee.MVC/Areas/Shared/Views/UserTopics/ManageUserTopics.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/UserTopics/ManageUserTopics.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<iTrainee.Models.UserTopics>
+﻿@*@model IEnumerable<iTrainee.Models.UserTopics>
 
 @{
     ViewData["Title"] = "ManageUserTopics";
@@ -45,3 +45,4 @@
 }
     </tbody>
 </table>
+*@
