--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -24,9 +24,7 @@
     }
 
     .alertModalBodyDiv {
-        min-height: 350px;
-        height: 410px;
-        overflow-y: auto;
+
     }
 
     .send-message-bar {
@@ -40,6 +38,35 @@
         cursor: pointer !important;
         color: #007bff;
         font-size: large;
+    }
+
+    [placeholder]:focus::-webkit-input-placeholder {
+        transition: text-indent 0.2s 0.2s ease;
+        text-indent: -100%;
+        opacity: 1;
+    }
+
+    .modal-footer {
+        border-top: none !important;
+    }
+
+    .send-message {
+        border: none;
+        border-bottom: 1.3px solid blue !important;
+        border-radius: 0px !important;
+    }
+
+    .send-message:focus {
+        border-color: none!important;
+    }
+
+        .send-message:visited {
+        border: none!important;
+    }
+
+    .modal-body {
+        padding-top: 0px!important;
+        padding-right: 0px!important;
     }
 </style>
 
@@ -103,10 +130,7 @@
             </div>
             <div class="modal-body alertModalBodyDiv" id="alertModalBodyDiv">
             </div>
-            <div class="modal-footer send-message-bar">
-                <input type="text" placeholder="Send Message" class="form-control" />
-                <span class="fa fa-paper-plane send-icon"></span>
-            </div>
+
         </div>
     </div>
 </div>
